--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <jib.container.appRoot>/app</jib.container.appRoot>
         <jib.ecr.root>430398651479.dkr.ecr.us-east-1.amazonaws.com</jib.ecr.root>
         <timestamp>${maven.build.timestamp}</timestamp>
+        <jacoco.version>0.8.3</jacoco.version>
     </properties>
 
     <developers>
@@ -226,9 +227,17 @@
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>org.jacoco.agent</artifactId>
+            <version>${jacoco.version}</version>
+            <classifier>runtime</classifier>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
+        <!--        Profile for running the Integration tests, requires everything except for the dpc-api service to be running-->
         <profile>
             <id>integration-tests</id>
             <build>
@@ -240,9 +249,54 @@
                             <groups>Integration</groups>
                         </configuration>
                     </plugin>
+
                 </plugins>
             </build>
         </profile>
+        <!--        CI Profile that adds JaCoCo to the Docker containers and runs the IT report phase correctly-->
+        <profile>
+            <id>ci</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-jacoco</id>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <phase>compile</phase>
+                                <configuration>
+                                    <includeArtifactIds>org.jacoco.agent</includeArtifactIds>
+                                    <includeClassifiers>runtime</includeClassifiers>
+                                    <outputDirectory>${project.build.directory}/jacoco-agent</outputDirectory>
+                                    <stripVersion>true</stripVersion>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!--                    We have to do this because for some reason the Maven plugin isn't letting me set configuration options on a per-execution basis-->
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <configuration combine.self="append">
+                            <dataFile>${project.basedir}/../jacocoReport/${project.artifactId}/jacoco-it.exec</dataFile>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>report-integration</id>
+                                <phase>prepare-package</phase>
+                                <goals>
+                                    <goal>report-integration</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+<!--        Run the Google Error Prone checker to make sure we didn't make any silly mistakes-->
         <profile>
             <id>error-prone</id>
             <build>
@@ -317,7 +371,7 @@
                 <plugin>
                     <groupId>com.google.cloud.tools</groupId>
                     <artifactId>jib-maven-plugin</artifactId>
-                    <version>1.0.0</version>
+                    <version>1.4.0</version>
                     <configuration>
                         <to>
                             <image>${jib.ecr.root}/${project.artifactId}</image>
@@ -337,6 +391,11 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.8.4</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -410,7 +469,6 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.3</version>
                 <configuration>
                     <excludes>
                         <!--Exclude auto-generated JOOQ classes-->
@@ -423,6 +481,7 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <id>run-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
