--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,13 @@ services:
       - "9901:9900"
     environment:
       - ENV=dev
+      - JACOCO=true
     depends_on:
       - db
       - redis
     volumes:
       - export-volume:/app/data
+      - ./jacocoReport/dpc-aggregation:/jacoco-report
 
   attribution:
     image: ${ECR_HOST:-430398651479.dkr.ecr.us-east-1.amazonaws.com/dpc-attribution}:latest
@@ -33,9 +35,12 @@ services:
       - db
     environment:
       - ENV=dev
+      - JACOCO=true
     ports:
       - "3500:8080"
       - "9902:9900"
+    volumes:
+      - ./jacocoReport/dpc-attribution:/jacoco-report
 
   api:
     image: ${ECR_HOST:-430398651479.dkr.ecr.us-east-1.amazonaws.com/dpc-api}:latest
@@ -44,12 +49,13 @@ services:
     environment:
       - attributionURL=http://attribution:8080/v1/
       - ENV=dev
+      - JACOCO=true
       - exportPath=/app/data
     depends_on:
       - attribution
     volumes:
       - export-volume:/app/data
-
+      - ./jacocoReport/dpc-api:/jacoco-report
 volumes:
   export-volume:
     driver: local
