DPC-531: Application context has been updated
The application context is now /api for prod-sbx and test.

--- a/dpc-api/src/main/resources/test.application.conf
+++ b/dpc-api/src/main/resources/test.application.conf
@@ -1,4 +1,9 @@
 dpc.api {
+
+  server {
+    applicationContextPath = "/api"
+  }
+
   database {
     driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://db.dpc-test.local:5432/dpc_attribution"
