--- a/dpc-api/src/main/resources/prod-sbx.application.conf
+++ b/dpc-api/src/main/resources/prod-sbx.application.conf
@@ -1,4 +1,9 @@
 dpc.api {
+
+  server {
+    applicationContextPath = "/api"
+  }
+
   database {
     driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_attribution"
