Update prodsbx to connected to peered BlueButton

--- a/dpc-aggregation/src/main/resources/prod-sbx.application.conf
+++ b/dpc-aggregation/src/main/resources/prod-sbx.application.conf
@@ -7,6 +7,7 @@ dpc.aggregation {
     password = dpc-safe
   }
   bbclient.keyStore.location = "/bb.keystore"
+  bbclient.serverBaseUrl = "https://internal-dpcwelb01-2074070868.us-east-1.elb.amazonaws.com/v1/fhir/"
   queue {
     singleServerConfig {
       address = "redis://redis.dpc-prod-sbx.local:6379"
