--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dpc-app</artifactId>
         <groupId>gov.cms.dpc</groupId>
-        <version>0.3.0</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>gov.cms.dpc</groupId>
             <artifactId>dpc-common</artifactId>
-            <version>0.3.0</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>gov.cms.dpc</groupId>
             <artifactId>dpc-macaroons</artifactId>
-            <version>0.3.0</version>
+            <version>0.4.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
