--- a/dpc-queue/pom.xml
+++ b/dpc-queue/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dpc-app</artifactId>
         <groupId>gov.cms.dpc</groupId>
-        <version>0.3.0</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>gov.cms.dpc</groupId>
             <artifactId>dpc-common</artifactId>
-            <version>0.3.0</version>
+            <version>0.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
