--- a/dpc-aggregation/src/main/resources/test.application.conf
+++ b/dpc-aggregation/src/main/resources/test.application.conf
@@ -13,4 +13,11 @@ dpc.aggregation {
     }
   }
   exportPath = "/app/data"
+
+  logging {
+    appenders = [{
+      type = console
+      logFormat = "%-5p [%d{ISO8601,UTC} - %t] %c: %replace(%m){'\n','&#xd;'}&#xd;%replace(%rEx){'\n','&#xd;'}"
+    }]
+  }
 }
