--- a/dpc-api/src/main/resources/test.application.conf
+++ b/dpc-api/src/main/resources/test.application.conf
@@ -19,4 +19,11 @@ dpc.api {
 
   attributionURL = "http://backend.dpc-test.local:8080/v1/"
   exportPath = "/app/data"
+
+  logging {
+    appenders = [{
+      type = console
+      logFormat = "%-5p [%d{ISO8601,UTC} - %t] %c: %replace(%m){'\n','&#xd;'}&#xd;%replace(%rEx){'\n','&#xd;'}"
+    }]
+  }
 }
