--- a/dpc-attribution/src/main/resources/prod-sbx.application.conf
+++ b/dpc-attribution/src/main/resources/prod-sbx.application.conf
@@ -12,4 +12,11 @@ dpc.attribution {
       port = 8080
     }]
   }
+
+  logging {
+    appenders = [{
+      type = console
+      logFormat = "%-5p [%d{ISO8601,UTC} - %t] %c: %replace(%m){'\n','&#xd;'}&#xd;%replace(%rEx){'\n','&#xd;'}"
+    }]
+  }
 }
