--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -25,7 +25,7 @@ server {
 logging {
   appenders = [{
     type = console
-    logFormat = "%-5p [%d{ISO8601,UTC} - %t] %c: %m%n%rEx"
+    logFormat = "%-5p [%d{ISO8601,UTC} - %t] %c: %replace(%m){'\n','\r'}\r%replace(%rEx){'\n','\r'}"
   }]
 }
 
