DPC-256: Added load test setup
Using JMeter we can now run a bunch of requests against one of our environments. This will be handy to scale up as we go along.

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>dpc-common</module>
         <module>dpc-bluebutton</module>
         <module>dpc-macaroons</module>
+        <module>dpc-smoketest</module>
     </modules>
 
     <groupId>gov.cms.dpc</groupId>
