DPC-558: Run integration tests during dpc-web build

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,6 @@ cache:
 before_install:
   - sudo /etc/init.d/postgresql stop
 
-install:
-  - gem install jekyll
-
 script:
-  - ./dpc-test.sh
-  - ./dpc-web-test.sh
+  - make ci-app
+  - make ci-web
