--- a/dpc-web/docker-compose.yml
+++ b/dpc-web/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - POSTGRES_DB=dpc-website_development
       - POSTGRES_PASSWORD=dpc-safe
     ports:
-      - "5432:5432"
+      - "15432:5432"
 
   web:
     build:
@@ -19,6 +19,7 @@ services:
       - DATABASE_URL=postgresql://db/dpc-website_development
       - DB_USER=postgres
       - DB_PASS=dpc-safe
+      - DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL=true
     ports:
       - "3000:3000"
     depends_on:
