DPC-256: Fix sloppy commit, have jacoco ignore testing code
We don't need code coverage for testing code.

Also, fixed my sloppy renaming, at least Ron is on the ball!

--- a/pom.xml
+++ b/pom.xml
@@ -283,6 +283,9 @@
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <configuration combine.self="append">
                             <dataFile>${project.basedir}/../jacocoReport/${project.artifactId}/jacoco-it.exec</dataFile>
+                            <excludes>
+                                <exclude>gov.cms.dpc.testing.*</exclude>
+                            </excludes>
                         </configuration>
                         <executions>
                             <execution>
