--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,10 +52,24 @@ services:
       - JACOCO=${REPORT_COVERAGE}
       - exportPath=/app/data
     depends_on:
-      - attribution
+      - start_dependencies
     volumes:
       - export-volume:/app/data
       - ./jacocoReport/dpc-api:/jacoco-report
+
+  start_dependencies:
+    image: dadarek/wait-for-dependencies
+    depends_on:
+      - attribution
+      - aggregation
+    command: attribution:8080 aggregation:9900
+
+  start_api:
+    image: dadarek/wait-for-dependencies
+    depends_on:
+      - api
+    command: api:3002
+
 volumes:
   export-volume:
     driver: local
