--- a/pom.xml
+++ b/pom.xml
@@ -283,9 +283,6 @@
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <configuration combine.self="append">
                             <dataFile>${project.basedir}/../jacocoReport/${project.artifactId}/jacoco-it.exec</dataFile>
-                            <excludes>
-                                <exclude>gov.cms.dpc.testing.*</exclude>
-                            </excludes>
                         </configuration>
                         <executions>
                             <execution>
@@ -494,6 +491,8 @@
                         <exclude>gov/cms/dpc/**/cli/**/*</exclude>
                         <!-- Exclude HL7 parsers, because they're too big-->
                         <exclude>org/hl7/fhir/r4/formats/*</exclude>
+                        <!-- We can exclude testing files, because they're for testing-->
+                        <exclude>gov.cms.dpc.testing.*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
