DPC-256: JMeter load test (#198)
* DPC-256: Added load test setup

Using JMeter we can now run a bunch of requests against one of our environments. This will be handy to scale up as we go along.

* DPC-256: Refactored test helpers and Makefile

Makefile now has smoke/environment targets.

Refactored the DemoCommand and SmokeTest class to share more code.

* DPC-256: Make error prone happy.

* DPC-256: Rename prod target to prod-sbx

This better matches what are actual environments are called.

* DPC-256: Fix sloppy commit, have jacoco ignore testing code

We don't need code coverage for testing code.

Also, fixed my sloppy renaming, at least Ron is on the ball!

* DPC-256: Fix maven exclusion ordering

The jacoco exclusion was in the wrong jacoco config. This should fix that.

* DPC-256: One more try with the Jacoco globs.

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>dpc-common</module>
         <module>dpc-bluebutton</module>
         <module>dpc-macaroons</module>
+        <module>dpc-smoketest</module>
     </modules>
 
     <groupId>gov.cms.dpc</groupId>
@@ -490,6 +491,8 @@
                         <exclude>gov/cms/dpc/**/cli/**/*</exclude>
                         <!-- Exclude HL7 parsers, because they're too big-->
                         <exclude>org/hl7/fhir/r4/formats/*</exclude>
+                        <!-- We can exclude testing files, because they're for testing-->
+                        <exclude>gov/cms/dpc/testing/**/*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
