DPC-558: Jenkins Integration Tests (#199)
* DPC-558: Fix integration tests running when disabled

* DPC-558: Update dpc-test script to handle installing dependencies

* DPC-558: Exclude more files from the Docker build for faster builds

* DPC-558: Speed up dpc-web Docker builds

* DPC-558: Run integration tests during dpc-web build

* DPC-558: Remove sleep in favor of blocking test script

* DPC-558: Fix docker-compose start order

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,20 @@ services:
     volumes:
       - export-volume:/app/data
       - ./jacocoReport/dpc-api:/jacoco-report
+
+  start_dependencies:
+    image: dadarek/wait-for-dependencies
+    depends_on:
+      - attribution
+      - aggregation
+    command: attribution:8080 aggregation:9900
+
+  start_api:
+    image: dadarek/wait-for-dependencies
+    depends_on:
+      - api
+    command: api:3002
+
 volumes:
   export-volume:
     driver: local
