--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,7 @@ cache:
 
 before_install:
   - sudo /etc/init.d/postgresql stop
-  - docker-compose up -d db redis
-  - wget https://codeclimate.com/downloads/test-reporter/test-reporter-0.6.3-linux-amd64 -O ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
-
-install:
-  - npm install newman
-  - gem install jekyll
 
 script:
-  - ./dpc-test.sh
-  - ./dpc-web-test.sh
+  - make ci-app
+  - make ci-web
