DPC-558: Fix testing race condition (#201)
* DPC-558: Fix testing race condition

* DPC-558: Core dependencies need to be started separately or race condition continues

* DPC-558: Core dependencies still need to be started with api deps

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,14 @@ services:
       - export-volume:/app/data
       - ./jacocoReport/dpc-api:/jacoco-report
 
-  start_dependencies:
+  start_core_dependencies:
+    image: dadarek/wait-for-dependencies
+    depends_on:
+      - redis
+      - db
+    command: redis:6379 db:5432
+
+  start_api_dependencies:
     image: dadarek/wait-for-dependencies
     depends_on:
       - attribution
