--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -22,6 +22,7 @@ gem 'health_check'
 
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'pry'
 
   gem 'rspec-rails'
   gem 'database_cleaner'
