--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -46,6 +46,8 @@ group :development do
 
   gem 'rubocop', require: false
   gem 'rubocop-performance', require: false
+
+  gem 'letter_opener'
 end
 
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
