Set up Sidekiq as the backend for ActiveJob
Sidekiq is a well-supported backend job processing library. This commit
adds it to the standard config as well as sets it up with Docker. We're
running the Sidekiq as a separate container due to the Docker best
practice of running one process per container. This container is pretty
much the same as the web app container but without the IG and Node
stuff (since Sidekiq typically doesn't deal with the front end).

--- a/dpc-web/docker-compose.yml
+++ b/dpc-web/docker-compose.yml
@@ -10,7 +10,13 @@ services:
     ports:
       - "15432:5432"
 
+  redis:
+    image: redis
+
   web:
+    depends_on:
+      - db
+      - redis
     build:
       context: ..
       dockerfile: dpc-web/Dockerfile
@@ -20,7 +26,20 @@ services:
       - DB_USER=postgres
       - DB_PASS=dpc-safe
       - DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL=true
+      - REDIS_URL=redis://redis:6379
     ports:
       - "3000:3000"
+
+  sidekiq:
     depends_on:
       - db
+      - redis
+    build:
+      context: ..
+      dockerfile: dpc-web/docker/sidekiq/Dockerfile
+    environment:
+      - DATABASE_URL=postgresql://db/dpc-website_development
+      - DB_USER=postgres
+      - DB_PASS=dpc-safe
+      - DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL=true
+      - REDIS_URL=redis://redis:6379
