--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -48,3 +48,5 @@ group :development do
 end
 
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+gem 'delayed_job_active_record'
+gem 'daemons'
