--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -22,6 +22,7 @@ gem 'health_check'
 
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+  gem 'pry'
 
   gem 'rspec-rails'
   gem 'database_cleaner'
@@ -45,6 +46,8 @@ group :development do
 
   gem 'rubocop', require: false
   gem 'rubocop-performance', require: false
+
+  gem 'letter_opener'
 end
 
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
