--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -37,5 +37,6 @@ plugins:
       app_path: dpc-web
   rubocop:
     enabled: true
+    channel: rubocop-0-67
     config:
       file: "dpc-web/.rubocop.yml"
