Attempt to make excludes work on codeclimate for rubocop

--- a/dpc-web/.rubocop.yml
+++ b/dpc-web/.rubocop.yml
@@ -11,8 +11,8 @@ AllCops:
     - 'config/**/*'
     - 'config.ru'
     - 'db/**/*'
-    - 'Gemfile'
-    - 'Rakefile'
+    - 'dpc-web/Gemfile'
+    - 'dpc-web/Rakefile'
 
 Metrics/LineLength:
   Max: 120
