Update Rubocop config
CodeClimate isn't respecting our Excludes for Gemfile and Rakefile,
so let's remove them for now. This disabled the gem order rule (which
sometimes isn't a good thing if certain gems have to be installed first)
and the SymbolArray style for Gemfile because I think it's
unconventional there. Add the Frozen String Literal comments to the
relevant two files because why not.

--- a/dpc-web/.rubocop.yml
+++ b/dpc-web/.rubocop.yml
@@ -11,8 +11,9 @@ AllCops:
     - 'config/**/*'
     - 'config.ru'
     - 'db/**/*'
-    - 'dpc-web/Gemfile'
-    - 'dpc-web/Rakefile'
+
+Bundler/OrderedGems:
+  Enabled: false
 
 Metrics/LineLength:
   Max: 120
@@ -34,3 +35,7 @@ Style/Documentation:
 
 Style/Lambda:
   Enabled: false
+
+Style/SymbolArray:
+  Exclude:
+    - 'Gemfile'
