DPC-447: Add Ruby checks to code climate. (#126)
* DPC-447: Initial code climate commit

Enabled brakeman and RuboCop

* DPC-447: Remove rubocop path

Not sure that this will work, but we'll try.

* Paths again

* Attempt different file path

* Update codeclimate rubocop channel

Specifying this channel should allow us to use rubocop-performance.
See this issue: https://github.com/codeclimate/codeclimate-rubocop/issues/165

* Remove separate rubocop code climate config file

* Let's get the new Rubocop build passing

* Adds Frozen String Literal Comment to necessary files
  See this issue for more info: https://github.com/rubocop-hq/rubocop/issues/3284
* Removes block comments from spec_helper.rb
* Removes empty lines

* More rubocop style fixes

* Attempt to make excludes work on codeclimate for rubocop

* Update Rubocop config

CodeClimate isn't respecting our Excludes for Gemfile and Rakefile,
so let's remove them for now. This disabled the gem order rule (which
sometimes isn't a good thing if certain gems have to be installed first)
and the SymbolArray style for Gemfile because I think it's
unconventional there. Add the Frozen String Literal comments to the
relevant two files because why not.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -31,3 +31,12 @@ plugins:
     enabled: true
     config:
       sonar.java.source: "11"
+  brakeman:
+    enabled: true
+    config:
+      app_path: dpc-web
+  rubocop:
+    enabled: true
+    channel: rubocop-0-67
+    config:
+      file: "dpc-web/.rubocop.yml"
