DPC-606: Name test builds
Name the builds and fix the commands.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ cache:
 jobs:
   include:
     - stage: test
-      script: make ci-app
+      script: "make ci-app" Application
     - stage: test
-      script: make ci-web
+      script: "make ci-web" Website
 
 before_install:
   - sudo /etc/init.d/postgresql stop
