--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -55,3 +55,5 @@ end
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'delayed_job_active_record'
 gem 'daemons'
+gem 'omniauth-github'
+gem 'octokit'
