--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,14 @@ cache:
   directories:
     - $HOME/.m2
 
+# Skip build in Maven install, which we run ourselves
+install: true
+
 jobs:
   include:
-    - script: ./dpc-test.sh Application
+    - script: make ci-app
       name: "API Build"
-    - script: ./dpc-web-test.sh Website
+    - script: make ci-website
       name: "Website Build"
 
 before_install:
