DPC-606: Split Travis build into Website and Application builds (#212)
* DPC-606: Split travis build

Split application and web build into individual builds.

* DPC-606: Name test builds

Name the builds and fix the commands.

* DPC-606: Rename commands.

* DPC-606: Build naming

Add more intuitive names to builds

* DPC-606: Disable default Travis install

Skip the initial Travis install step, which simply adds an additional compilation to our build.

Also switched stage commands to use the make targets, rather than calling the scripts directly.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,15 @@ cache:
   directories:
     - $HOME/.m2
 
+# Skip build in Maven install, which we run ourselves
+install: true
+
+jobs:
+  include:
+    - script: make ci-app
+      name: "API Build"
+    - script: make ci-web
+      name: "Website Build"
+
 before_install:
   - sudo /etc/init.d/postgresql stop
-
-script:
-  - make ci-app
-  - make ci-web
