Enable InternalUser login via Github (#219)
* Initial work adding Github Oauth for InternalUsers

* Uses Github Omniauth gem and Devise for OAuth flow
* Removes first/last names from InternalUsers because Github doesn't
  store these or provide them
* Saves github name and nickname (login) in case we want those
* Verifies that we are only signing in users on a pre-approved org and
  team

* Work on Github OAuth for InternalUsers

* Add specs for this feature
* Add ClimateControl gem to manage env vars in tests

* Add UID uniqueness validation and index

Also remove unneeded columns and indices

* Removes password routes and updates internal login

We don't need the password routes or the "recoverable" Devide module
anymore. This also removes unnecessary links in the internal user
login page so that they only see the Github login link.

* Remove unneeded env var from README

* Update internal user auth feature spec

To test explicitly that the existing internal user is the one who is
found and logged in.

* Add newline for rubocop

--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -38,6 +38,7 @@ end
 
 group :test do
   gem 'selenium-webdriver'
+  gem 'climate_control'
 end
 
 group :development do
@@ -55,3 +56,5 @@ end
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'delayed_job_active_record'
 gem 'daemons'
+gem 'omniauth-github'
+gem 'octokit'
