--- a/pom.xml
+++ b/pom.xml
@@ -491,6 +491,7 @@
                         <exclude>gov/cms/dpc/**/cli/**/*</exclude>
                         <!-- Exclude HL7 parsers, because they're too big-->
                         <exclude>org/hl7/fhir/r4/formats/*</exclude>
+                        <exclude>org/hl7/fhir/r5/formats/*</exclude>
                         <!-- We can exclude testing files, because they're for testing-->
                         <exclude>gov/cms/dpc/testing/**/*</exclude>
                     </excludes>
