--- a/dpc-web/docker-compose.yml
+++ b/dpc-web/docker-compose.yml
@@ -10,6 +10,12 @@ services:
     ports:
       - "15432:5432"
 
+  start_core_dependencies:
+    image: dadarek/wait-for-dependencies
+    depends_on:
+      - db
+    command: db:5432
+
   web:
     build:
       context: ..
@@ -23,4 +29,4 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - db
+      - start_core_dependencies
