Move bundler-audit to gem file
Getting an issue in CI with being unable to find the command 'audit', so
let's put this in the Gemfile as we can try `bundle exec`.

--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -34,6 +34,8 @@ group :development, :test do
   gem 'simplecov', require: false
   gem 'vcr'
   gem 'webmock'
+
+  gem 'bundler-audit'
 end
 
 group :test do
