WIP Users Index for internal users
* Add controller test helpers for Devise
* Add rails-controller-testing gem in order to use `assigns`. I want to
  use this for now to test that we're returning the users we want to
  from the controller. This may become unnecessary depending how this
  filter/search index evolves.

--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -39,6 +39,7 @@ end
 group :test do
   gem 'selenium-webdriver'
   gem 'climate_control'
+  gem 'rails-controller-testing'
 end
 
 group :development do
