As a CMS user I want to view users who have requested access. (#228)
* WIP Users Index for internal users

* Add controller test helpers for Devise
* Add rails-controller-testing gem in order to use `assigns`. I want to
  use this for now to test that we're returning the users we want to
  from the controller. This may become unnecessary depending how this
  filter/search index evolves.

* Change wrong password message now that we have PW rest

* Work on users mgmt UI

* Ignore .env for storing envs in local dev

* More work on users views

More work on users index page

* MVPs of internal/users index and show

* Functional on mobile and close enough to mockups for now. I want to
  start working on filter functionality at this point.
* Update specs to look for email when internal user signs in. This seems
  like the most specific information for a user; we use their name if
  the email isn't available.

* Add pagination with Kaminari

* https://github.com/kaminari/kaminari
* Default to 50 per page (my personal prefernece but we can change)
* Add pagination links and info to users index
* Also sort users by created_at DESC for now until we add sorting

* Updates to appease rubocop

* Add created_at index to users

--- a/dpc-web/Gemfile
+++ b/dpc-web/Gemfile
@@ -39,6 +39,7 @@ end
 group :test do
   gem 'selenium-webdriver'
   gem 'climate_control'
+  gem 'rails-controller-testing'
 end
 
 group :development do
@@ -59,3 +60,4 @@ gem 'daemons'
 gem 'omniauth-github'
 gem 'omniauth-rails_csrf_protection', '~> 0.1'
 gem 'octokit'
+gem 'kaminari'
