--- a/dpc-smoketest/pom.xml
+++ b/dpc-smoketest/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dpc-app</artifactId>
         <groupId>gov.cms.dpc</groupId>
-        <version>0.4.0-SNAPSHOT</version>
+        <version>0.3.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>gov.cms.dpc</groupId>
             <artifactId>dpc-api</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
+            <version>0.3.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jmeter</groupId>
