--- a/dpc-common/pom.xml
+++ b/dpc-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dpc-app</artifactId>
         <groupId>gov.cms.dpc</groupId>
-        <version>0.3.5</version>
+        <version>0.4.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
