--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <groupId>gov.cms.dpc</groupId>
     <artifactId>dpc-app</artifactId>
-    <version>0.3.5</version>
+    <version>0.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>DPC Application</name>
