--- a/dpc-web/.rubocop.yml
+++ b/dpc-web/.rubocop.yml
@@ -33,6 +33,9 @@ Metrics/AbcSize:
 Style/Documentation:
   Enabled: false
 
+Style/IfUnlessModifier:
+  Enabled: false
+
 Style/Lambda:
   Enabled: false
 
