DPC-499: Support docker-compose starting with multiple databases

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,13 @@ services:
   db:
     image: postgres
     environment:
-      - POSTGRES_DB=dpc_attribution
+      - POSTGRES_MULTIPLE_DATABASES=dpc_attribution,dpc_queue
+      - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=dpc-safe
     ports:
       - "5432:5432"
+    volumes:
+      - ./docker/postgres:/docker-entrypoint-initdb.d
 
   aggregation:
     image: ${ECR_HOST:-755619740999.dkr.ecr.us-east-1.amazonaws.com/dpc-aggregation}:latest
