--- a/pom.xml
+++ b/pom.xml
@@ -485,6 +485,7 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <configuration>
                     <excludes>
+                        <exclude>**/*_.class</exclude>
                         <!--Exclude auto-generated JOOQ classes-->
                         <exclude>gov/cms/dpc/attribution/dao/**/*</exclude>
                         <!-- Exclude the cli commands, which we don't have tests for-->
