DPC-499: Split off queue into separate database

--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -10,6 +10,16 @@ database {
   maxSize = 10
 }
 
+queuedb {
+  driverClass = org.postgresql.Driver
+  url = "jdbc:postgresql://localhost:5432/dpc_queue"
+  user = postgres
+  password = dpc-safe
+  initialSize = 5
+  minSize = 5
+  maxSize = 10
+}
+
 server {
   registerDefaultExceptionMappers = false
   applicationConnectors = [{
