--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -19,8 +19,17 @@
 
     <dependencies>
         <dependency>
+            <groupId>gov.cms.dpc</groupId>
+            <artifactId>dpc-common</artifactId>
+            <version>0.4.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-migrations</artifactId>
         </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
@@ -46,12 +55,6 @@
         <dependency>
             <groupId>gov.cms.dpc</groupId>
             <artifactId>dpc-queue</artifactId>
-            <version>0.4.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>gov.cms.dpc</groupId>
-            <artifactId>dpc-common</artifactId>
             <version>0.4.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
