DPC-499: Environment configuration for queue database

--- a/dpc-aggregation/src/main/resources/dev.application.conf
+++ b/dpc-aggregation/src/main/resources/dev.application.conf
@@ -2,8 +2,16 @@
 dpc.aggregation {
   database {
     url = "jdbc:postgresql://db:5432/dpc_attribution"
+    user = postgres
     password = dpc-safe
   }
+
+  queuedb {
+    url = "jdbc:postgresql://db:5432/dpc_queue"
+    user = postgres
+    password = dpc-safe
+  }
+
   bbclient.keyStore.location = "/bb.keystore"
   exportPath = "/app/data"
 
