--- a/dpc-api/src/main/resources/prod-sbx.application.conf
+++ b/dpc-api/src/main/resources/prod-sbx.application.conf
@@ -5,11 +5,17 @@ dpc.api {
   }
 
   database {
-    driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_attribution"
     user = postgres
     password = dpc-safe
   }
+
+  queuedb {
+      url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_queue"
+      user = postgres
+      password = dpc-safe
+    }
+
   bbclient.keyStore.location = "/bb.keystore"
 
   attributionURL = "http://backend.dpc-prod-sbx.local:8080/v1/"
