--- a/dpc-api/src/main/resources/sbx.application.conf
+++ b/dpc-api/src/main/resources/sbx.application.conf
@@ -6,6 +6,13 @@ dpc.api {
     user = postgres
     password = postgres
   }
+
+  queuedb {
+      url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_queue"
+      user = postgres
+      password = dpc-safe
+    }
+
   bbclient.keyStore.location = "/bb.keystore"
 
   attributionURL = "http://backend.dpc-dev.local:8080/v1/"
