--- a/dpc-api/src/main/resources/test.application.conf
+++ b/dpc-api/src/main/resources/test.application.conf
@@ -10,6 +10,13 @@ dpc.api {
     user = postgres
     password = dpc-safe
   }
+
+  queuedb {
+    url = "jdbc:postgresql://db.dpc-test.local:5432/dpc_queue"
+    user = postgres
+    password = dpc-safe
+  }
+
   bbclient.keyStore.location = "/bb.keystore"
 
   attributionURL = "http://backend.dpc-test.local:8080/v1/"
