--- a/dpc-api/src/main/resources/dev.application.conf
+++ b/dpc-api/src/main/resources/dev.application.conf
@@ -1,10 +1,15 @@
 dpc.api {
   database = {
-    driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://db:5432/dpc_attribution"
     user = postgres
     password = dpc-safe
   }
+
+  queuedb = {
+      url = "jdbc:postgresql://db:5432/dpc_queue"
+      user = postgres
+      password = dpc-safe
+    }
 
   attributionURL = "http://attribution:8080/v1/"
   exportPath = /app/data
