DPC-499: Add DB_MIGRATION environment variable

--- a/dpc-aggregation/pom.xml
+++ b/dpc-aggregation/pom.xml
@@ -195,6 +195,9 @@
                         <ports>
                             <port>8081</port>
                         </ports>
+                        <environment>
+                            <DB_MIGRATION>1</DB_MIGRATION>
+                        </environment>
                         <entrypoint>/entrypoint.sh</entrypoint>
                     </container>
                 </configuration>
