--- a/dpc-attribution/pom.xml
+++ b/dpc-attribution/pom.xml
@@ -177,6 +177,9 @@
                         <ports>
                             <port>8080</port>
                         </ports>
+                        <environment>
+                            <DB_MIGRATION>1</DB_MIGRATION>
+                        </environment>
                         <entrypoint>/entrypoint.sh</entrypoint>
                     </container>
                     <extraDirectories>
