--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     ports:
       - "9901:9900"
     environment:
-      - ENV=dev
+      - ENV=local
       - JACOCO=${REPORT_COVERAGE}
     depends_on:
       - db
@@ -34,7 +34,7 @@ services:
     depends_on:
       - db
     environment:
-      - ENV=dev
+      - ENV=local
       - JACOCO=${REPORT_COVERAGE}
     ports:
       - "3500:8080"
@@ -48,7 +48,7 @@ services:
       - "3002:3002"
     environment:
       - attributionURL=http://attribution:8080/v1/
-      - ENV=dev
+      - ENV=local
       - JACOCO=${REPORT_COVERAGE}
       - exportPath=/app/data
     depends_on:
