--- a/dpc-aggregation/src/main/resources/dev.application.conf
+++ b/dpc-aggregation/src/main/resources/dev.application.conf
@@ -1,21 +1,16 @@
-# Override the keystore location to point to correct location when run within docker "dev" environment
+# Override the keystore location to point to correct location when run within docker environment
 dpc.aggregation {
   database {
-    url = "jdbc:postgresql://db:5432/dpc_attribution"
+    driverClass = org.postgresql.Driver
+    url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
+    user = postgres
     password = dpc-safe
   }
   bbclient.keyStore.location = "/bb.keystore"
   queue {
     singleServerConfig {
-      address = "redis://redis:6379"
+      address = "redis://redis.dpc-dev.local:6379"
     }
   }
   exportPath = "/app/data"
-
-  logging {
-    loggers {
-      "gov.cms.dpc" = DEBUG
-      "org.hibernate.SQL" = TRACE
-    }
-  }
 }
