--- a/dpc-api/src/main/resources/dev.application.conf
+++ b/dpc-api/src/main/resources/dev.application.conf
@@ -1,18 +1,22 @@
 dpc.api {
-  queue {
-    singleServerConfig {
-      address = "redis://redis:6379"
-    }
+
+  server {
+    applicationContextPath = "/api"
   }
 
-  database = {
+  database {
     driverClass = org.postgresql.Driver
-    url = "jdbc:postgresql://db:5432/dpc_attribution"
+    url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
     user = postgres
     password = dpc-safe
   }
+  bbclient.keyStore.location = "/bb.keystore"
+  queue {
+    singleServerConfig {
+      address = "redis://redis.dpc-dev.local:6379"
+    }
+  }
 
-  attributionURL = "http://attribution:8080/v1/"
-  exportPath = /app/data
-  authenticationDisabled = true
+  attributionURL = "http://backend.dpc-dev.local:8080/v1/"
+  exportPath = "/app/data"
 }
