--- a/dpc-aggregation/src/main/resources/dev.application.conf
+++ b/dpc-aggregation/src/main/resources/dev.application.conf
@@ -2,14 +2,17 @@
 dpc.aggregation {
   database {
     url = "jdbc:postgresql://db:5432/dpc_attribution"
+    user = postgres
     password = dpc-safe
   }
-  bbclient.keyStore.location = "/bb.keystore"
-  queue {
-    singleServerConfig {
-      address = "redis://redis:6379"
-    }
+
+  queuedb {
+    url = "jdbc:postgresql://db:5432/dpc_queue"
+    user = postgres
+    password = dpc-safe
   }
+
+  bbclient.keyStore.location = "/bb.keystore"
   exportPath = "/app/data"
 
   logging {
