--- a/dpc-aggregation/src/main/resources/sbx.application.conf
+++ b/dpc-aggregation/src/main/resources/sbx.application.conf
@@ -1,16 +1,17 @@
 # Override the keystore location to point to correct location when run within docker environment
 dpc.aggregation {
   database {
-    driverClass = org.postgresql.Driver
     url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_attribution"
     user = postgres
     password = postgres
   }
-  bbclient.keyStore.location = "/bb.keystore"
-  queue {
-    singleServerConfig {
-      address = "redis://redis.dpc-dev.local:6379"
-    }
+
+  queuedb {
+    url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_queue"
+    user = postgres
+    password = postgres
   }
+
+  bbclient.keyStore.location = "/bb.keystore"
   exportPath = "/app/data"
 }
