--- a/dpc-api/src/main/resources/test.application.conf
+++ b/dpc-api/src/main/resources/test.application.conf
@@ -10,12 +10,14 @@ dpc.api {
     user = postgres
     password = dpc-safe
   }
-  bbclient.keyStore.location = "/bb.keystore"
-  queue {
-    singleServerConfig {
-      address = "redis://redis.dpc-test.local:6379"
-    }
+
+  queuedb {
+    url = "jdbc:postgresql://db.dpc-test.local:5432/dpc_queue"
+    user = postgres
+    password = dpc-safe
   }
+
+  bbclient.keyStore.location = "/bb.keystore"
 
   attributionURL = "http://backend.dpc-test.local:8080/v1/"
   exportPath = "/app/data"
