DPC-236: Added auth DB to API service
API service now connects to an auth DB. Tests are failing due to a couple of issues, but the basic functionality is working.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   db:
     image: postgres
     environment:
-      - POSTGRES_MULTIPLE_DATABASES=dpc_attribution,dpc_queue
+      - POSTGRES_MULTIPLE_DATABASES=dpc_attribution,dpc_queue,dpc_auth
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=dpc-safe
     ports:
