--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -2,6 +2,16 @@ dpc.api {
   include "server.conf"
   include "queue.conf"
 
+  authdb {
+    driverClass = org.postgresql.Driver
+    url = "jdbc:postgresql://localhost:5432/dpc_auth"
+    user = postgres
+    password = dpc-safe
+    initialSize = 5
+    minSize = 5
+    maxSize = 10
+  }
+
   attributionURL = "http://localhost:3500/v1/"
   exportPath = "/tmp"
 
