DPC-236: Add missing migrate variable to API Docker image
If we're going to migrate, we should actually migrate.

--- a/dpc-api/pom.xml
+++ b/dpc-api/pom.xml
@@ -212,6 +212,9 @@
                         <ports>
                             <port>8080</port>
                         </ports>
+                        <environment>
+                            <DB_MIGRATION>1</DB_MIGRATION>
+                        </environment>
                         <entrypoint>/entrypoint.sh</entrypoint>
                     </container>
                     <extraDirectories>
