DPC-236: Add auth db to environment config files
Auth DB is now linked into configs.

--- a/dpc-api/src/main/resources/dev.application.conf
+++ b/dpc-api/src/main/resources/dev.application.conf
@@ -11,6 +11,12 @@ dpc.api {
       password = dpc-safe
     }
 
+  authdb = {
+    url = "jdbc:postgresql://db:5432/dpc_auth"
+    user = postgres
+    password = dpc-safe
+  }
+
   attributionURL = "http://attribution:8080/v1/"
   exportPath = /app/data
   authenticationDisabled = true
