--- a/dpc-api/src/main/resources/prod-sbx.application.conf
+++ b/dpc-api/src/main/resources/prod-sbx.application.conf
@@ -10,6 +10,12 @@ dpc.api {
     password = dpc-safe
   }
 
+  authdb {
+    url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_auth"
+    user = postgres
+    password = dpc-safe
+  }
+
   queuedb {
       url = "jdbc:postgresql://db.dpc-prod-sbx.local:5432/dpc_queue"
       user = postgres
