--- a/dpc-api/src/main/resources/sbx.application.conf
+++ b/dpc-api/src/main/resources/sbx.application.conf
@@ -8,10 +8,16 @@ dpc.api {
   }
 
   queuedb {
-      url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_queue"
-      user = postgres
-      password = dpc-safe
-    }
+    url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_queue"
+    user = postgres
+    password = dpc-safe
+  }
+
+  authdb {
+    url = "jdbc:postgresql://db.dpc-dev.local:5432/dpc_auth"
+    user = postgres
+    password = dpc-safe
+  }
 
   bbclient.keyStore.location = "/bb.keystore"
 
