--- a/dpc-api/src/main/resources/test.application.conf
+++ b/dpc-api/src/main/resources/test.application.conf
@@ -17,6 +17,12 @@ dpc.api {
     password = dpc-safe
   }
 
+  authdb {
+    url = "jdbc:postgresql://db.dpc-test.local:5432/dpc_auth"
+    user = postgres
+    password = dpc-safe
+  }
+
   bbclient.keyStore.location = "/bb.keystore"
 
   attributionURL = "http://backend.dpc-test.local:8080/v1/"
