DPC-678: API service tests are starting
Mostly duplicated the configuration options and injection patterns from the attribution service. This will need to come out later, but at least things are running.

--- a/dpc-api/src/main/resources/application.conf
+++ b/dpc-api/src/main/resources/application.conf
@@ -33,4 +33,16 @@ dpc.api {
     license = "license"
     licenseUrl = "https://github.com/CMSgov/dpc-app/blob/master/LICENSE.md"
   }
+
+  tokens {
+    versionPolicy {
+      minimumVersion = 1
+      currentVersion = 1
+    }
+
+    expirationPolicy {
+      expirationOffset = 1
+      expirationUnit = "YEARS"
+    }
+  }
 }
