DPC-679: Added package.json file
Added a root package.json file to track our Newman dependencies.

Restrict node versions to 0.12 or higher.

Cache node modules for both dpc-web and newman.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ jdk:
 cache:
   directories:
     - $HOME/.m2
+    - .node_modules
+    - dpc-web/.node_modules
 
 # Skip build in Maven install, which we run ourselves
 install: true
