DPC-678: Address code review comments.
Address some comments.

Fixed the missing explicit binding in Guice.

--- a/src/main/resources/server.conf
+++ b/src/main/resources/server.conf
@@ -32,12 +32,12 @@ server {
   }]
 }
 
-//logging {
-//  appenders = [{
-//    type = console
-//    logFormat = "%-5p [%d{ISO8601,UTC} - %t] %c: %replace(%m){'\n','\r'}\r%replace(%rEx){'\n','\r'}"
-//  }]
-//}
+logging {
+  appenders = [{
+    type = console
+    logFormat = "%-5p [%d{ISO8601,UTC} - %t] %c: %replace(%m){'\n','\r'}\r%replace(%rEx){'\n','\r'}"
+  }]
+}
 
 metrics {
   frequency = 1 minute
