Add missing Javadocs
Address some Javadoc warnings.

Also silenced warnings for Jooq code.

--- a/pom.xml
+++ b/pom.xml
@@ -467,7 +467,7 @@
                         </goals>
                         <configuration>
                             <!--Exclude generated sources, such as Jooq-->
-                            <excludePackageNames>gov.cms.dpc.attribution.dao</excludePackageNames>
+                            <excludePackageNames>gov.cms.dpc.attribution.dao;gov.cms.dpc.attribution.dao.*</excludePackageNames>
                         </configuration>
                     </execution>
                 </executions>
